--- a/app/src/main/res/drawable/round_corners.xml
+++ b/app/src/main/res/drawable/round_corners.xml
@@ -1,4 +1,6 @@
 <!-- res/drawable/rounded_corners.xml -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="16dp"/> <!-- Set the corner radius here -->
+    <corners android:radius="16dp"/>
+    <solid android:color="#FFFFFF"/>
+    <!-- Set the corner radius here -->
 </shape>
