--- a/app/src/main/res/drawable/round_corners_right.xml
+++ b/app/src/main/res/drawable/round_corners_right.xml
@@ -1,6 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#d3d3d3"/> <!-- Set the background color -->
-
+    <solid android:color="@color/grey"/>
     <corners
         android:topLeftRadius="0dp"
         android:topRightRadius="16dp"
