--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:addStatesFromChildren="true"
     android:alwaysDrawnWithCache="true"
-    android:background="#FFFFFF">
+    android:background="@color/background">
 
     <Button
         android:id="@+id/startButton"
@@ -14,7 +13,7 @@
         android:layout_marginTop="100dp"
         android:layout_marginBottom="20dp"
         android:background="@drawable/circular_button"
-        android:text="On"
+        android:text="@string/main_b"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/locationText"
@@ -31,7 +30,7 @@
         android:gravity="start"
         android:fontFamily="sans-serif-condensed"
         android:textIsSelectable="true"
-        android:text="Getting location..."
+        android:text="@string/l_text"
         android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -44,6 +43,7 @@
         android:layout_marginHorizontal="10dp"
         android:layout_marginBottom="12dp"
         android:textAllCaps="false"
+        android:text="@string/is_lo_mut"
         android:backgroundTint="#d3d3d3"
         android:background="@drawable/round_corners"
         android:padding="18dp"
@@ -77,7 +77,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@drawable/round_corners_left"
-            android:text="Saved"
+            android:text="@string/s_l"
             android:textAllCaps="false"
             android:textColor="#000000" />
 
@@ -89,7 +89,7 @@
             android:textAllCaps="false"
             android:layout_weight="1"
             android:background="@drawable/round_corners_right"
-            android:text="Unmute"
+            android:text="@string/um_c"
             android:textColor="#000000" />
 </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
