--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,8 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="grey">#d3d3d3</color>
+    <color name="grey">#ffffff</color>
+    <color name="real_grey">#808080</color>
     <color name="red">#FF4400</color>
     <color name="green">#1A5D1A</color>
+    <color name="background">#ffd8d8</color>
 
 </resources>
